--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="manifest" href="/ico/site.webmanifest" />
     <title>The American Diatribe</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/site/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap"
       rel="stylesheet"
