--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head>
   <body>
+    <img
+      id="logo"
+      src="/img/apple-touch-icon.png"
+      width="60"
+    />
     <div class="heading">
       <a href="/" class="title">The American Diatribe</a>
     </div>
