--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img
       id="logo"
       src="/img/apple-touch-icon.png"
-      width="60"
+      width="60px"
     />
     <div class="heading">
       <a href="/" class="title">The American Diatribe</a>
