--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="/tips" class="nav">Contact</a>
     </div>
     <img
-      src="https://wallpaperaccess.com/full/1356216.jpg"
+      src="https://wallpapercat.com/w/full/d/3/1/1419131-3840x2160-desktop-4k-new-york-at-night-background-image.jpg"
       width="100%"
       style="top: 0px; clip-path: polygon(0 0, 0 100%, 100% 80%, 100% 0)"
     />
